# flask-profiler

./: .flake8  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  app.py  changelog.txt  default.py  example_app.py  flake.nix  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
examples/: app.py
flask_profiler/: __init__.py  configuration.py  flask_profiler.py  storage.py
flask_profiler/controllers/: filter_controller.py
flask_profiler/presenters/: filtered_presenter.py  summary_presenter.py
flask_profiler/static/: index.html
flask_profiler/storage/: __init__.py  base.py  mongo.py  sql_alchemy.py  sqlite.py
nix/: flask-profiler.nix  pythonPackages.nix
tests/: __init__.py  basetest.py  module_accounts.py  test_endpoint_ignore.py  test_filter_controller.py  test_measure_endpoint.py  test_measurement.py  test_sqlite.py  test_uuid_url_serialization.py
unitests/: __init__.py  basetest.py  test_measure_endpoint.py  test_measurement.py
