[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flask_profiler"
version = "1.8"
dependencies = [
    "Flask",
    "Flask-HTTPAuth",
    "simplejson"
]
description = "API endpoint profiler for Flask framework"
readme = "README.md"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
authors = [
    { name = "Mustafa Atik", email = "muatik@gmail.com"},
]
keywords = [
    "profiler", "flask", "performance", "optimization"
]

[project.optional-dependencies]
mongodb = ["pymongo"]
sqlalchemy = ["sqlalchemy"]

[project.license]
file = "LICENSE"

[project.urls]
github = "https://github.com/seppeljordan/flask-profiler"

[tool.setuptools]
packages = ["flask_profiler", "flask_profiler.storage", "flask_profiler.controllers"]

[tool.setuptools.package-data]
mypkg = [
    "storage/*",
    "static/dist/fonts/*",
    "static/dist/css/*",
    "static/dist/js/*",
    "static/dist/images/*",
    "static/dist/js/*",
    "static/dist/*",
    "static/dist/index.html",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:Dialect sqlite\+pysqlite does \*not\* support Decimal objects natively, and SQLAlchemy must convert from floating point - rounding errors and other issues may occur.',
]

[[tool.mypy.overrides]]
module = ["pymongo", "bson.*", "sqlalchemy.*", "flask_httpauth", "flask_testing"]
ignore_missing_imports = true